[package]
name = "eyra"
version = "0.16.2"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Rust programs written entirely in Rust"
documentation = "https://docs.rs/eyra"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/eyra"
edition = "2021"
exclude = ["/.github", "ci"]
keywords = ["linux"]

[dependencies]
c-gull = { version = "0.15.14", default-features = false, features = ["eyra"] }

[dev-dependencies]
assert_cmd = "2.0.12"
similar-asserts = "1.1.0"
rand = "0.8.4"
libc = "0.2.138"
cfg-if = "1.0.0"
rand_xorshift = "0.3.0"

# Test that the ctor crate works under mustang.
ctor = "0.2.0"

# Check if rustup is installed for tests
which = "4.4.0"

# Test that the core_simd crate works under mustang.
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[features]
default = ["be-std"]

# Enable logging of program and thread startup and shutdown.
log = ["c-gull/log"]

# Install `atomic_dbg::log` as a logger.
atomic-dbg-logger = ["c-gull/atomic-dbg-logger"]

# Install the `env_logger` crate as a logger.
env_logger = ["c-gull/env_logger"]

# Disable logging.
max_level_off = ["c-gull/max_level_off"]

# Enable highly experimental support for performing startup-time relocations,
# needed to support statically-linked PIE executables.
experimental-relocate = ["c-gull/experimental-relocate"]

# Have eyra do `use std::*;` so that it can be used as `std`.
be-std = []

# Enable `todo!()` stubs for unimplemented functions.
todo = ["c-gull/todo"]
