[package]
name = "all-from-source"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eyra = { path = "../..", default-features = false, features = ["be-std", "threadsafe-setenv"] }

[profile.release]
lto = true
codegen-units = 1

# This is just an example crate, and not part of the eyra workspace.
[workspace]
