[package]
name = "eyra-optional-example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Depend on Eyra... optionally!
std = { package = "eyra", path = "../..", optional = true }

[features]
eyra = ["dep:std"]

# This is just an example crate, and not part of the eyra workspace.
[workspace]

# TODO: Remove this workaround when
# https://github.com/llvm/llvm-project/pull/105513
# makes it into the Rust compiler.
[profile.dev.package.unwinding]
debug = false
